reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__struct_rename_field-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.input.TestStructRenameField"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.output.TestStructRenameField"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.input.TestStructRenameField": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.input.TestStructRenameField",
        "required": [
          "fieldName"
        ],
        "properties": {
          "fieldName": {
            "$ref": "#/components/schemas/u8"
          }
        }
      },
      "reflectapi_demo.tests.serde.output.TestStructRenameField": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.output.TestStructRenameField",
        "required": [
          "field_name"
        ],
        "properties": {
          "field_name": {
            "$ref": "#/components/schemas/u8"
          }
        }
      },
      "u8": {
        "description": "8-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
