reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__struct_with_flatten_optional_and_required-3.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_rust_code :: < TestStructWithFlattenOptionalAndRequired > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn inout_test(
            &self,
            input: super::types::reflectapi_demo::tests::serde::TestStructWithFlattenOptionalAndRequired,
            headers: reflectapi::Empty,
        ) -> Result<
            super::types::reflectapi_demo::tests::serde::TestStructWithFlattenOptionalAndRequired,
            reflectapi::rt::Error<reflectapi::Empty, C::Error>,
        > {
            reflectapi::rt::__request_impl(&self.client, "/inout_test", input, headers).await
        }
    }

    #[cfg(feature = "reqwest")]
    impl Interface<reflectapi::rt::ReqwestClient<reqwest::Client>> {
        /// Convenience: build the client backed by a bare `reqwest::Client`
        /// and the given base URL. Hides the
        /// [`reflectapi::rt::ReqwestClient`] adapter so callers don't need
        /// to name it.
        pub fn try_new(
            client: reqwest::Client,
            base_url: reflectapi::rt::Url,
        ) -> std::result::Result<Self, reflectapi::rt::UrlParseError> {
            Ok(Self::new(reflectapi::rt::ReqwestClient::try_new(
                client, base_url,
            )?))
        }
    }
}
pub mod types {
    pub mod reflectapi_demo {
        pub mod tests {
            pub mod serde {

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct TestStructRenameAll {
                    #[serde(rename = "fieldName")]
                    pub field_name: u8,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct TestStructWithFlattenNested {
                    pub f: u8,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct TestStructWithFlattenOptionalAndRequired {
    #[serde(default = "Default::default", skip_serializing_if = "std::option::Option::is_none", flatten)]
    pub g: std::option::Option<super::super::super::reflectapi_demo::tests::serde::TestStructWithFlattenNested>,
    #[serde(flatten)]
    pub k: super::super::super::reflectapi_demo::tests::serde::TestStructRenameAll,
}
            }
        }
    }
}
