reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__struct_with_flatten_optional_and_required.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::TestStructWithFlattenOptionalAndRequired"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::TestStructWithFlattenOptionalAndRequired"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestStructRenameAll",
        "fields": {
          "named": [
            {
              "name": "fieldName",
              "type": {
                "name": "u8"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestStructWithFlattenNested",
        "fields": {
          "named": [
            {
              "name": "f",
              "type": {
                "name": "u8"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestStructWithFlattenOptionalAndRequired",
        "fields": {
          "named": [
            {
              "name": "g",
              "type": {
                "name": "std::option::Option",
                "arguments": [
                  {
                    "name": "reflectapi_demo::tests::serde::TestStructWithFlattenNested"
                  }
                ]
              },
              "flattened": true
            },
            {
              "name": "k",
              "type": {
                "name": "reflectapi_demo::tests::serde::TestStructRenameAll"
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "std::option::Option",
        "description": "Optional nullable type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "representation": "none",
        "variants": [
          {
            "name": "None",
            "description": "The value is not provided, i.e. null",
            "fields": "none"
          },
          {
            "name": "Some",
            "description": "The value is provided and set to some value",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "T"
                  }
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestStructRenameAll",
        "fields": {
          "named": [
            {
              "name": "fieldName",
              "type": {
                "name": "u8"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestStructWithFlattenNested",
        "fields": {
          "named": [
            {
              "name": "f",
              "type": {
                "name": "u8"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::TestStructWithFlattenOptionalAndRequired",
        "fields": {
          "named": [
            {
              "name": "g",
              "type": {
                "name": "std::option::Option",
                "arguments": [
                  {
                    "name": "reflectapi_demo::tests::serde::TestStructWithFlattenNested"
                  }
                ]
              },
              "flattened": true
            },
            {
              "name": "k",
              "type": {
                "name": "reflectapi_demo::tests::serde::TestStructRenameAll"
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "std::option::Option",
        "description": "Optional nullable type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "representation": "none",
        "variants": [
          {
            "name": "None",
            "description": "The value is not provided, i.e. null",
            "fields": "none"
          },
          {
            "name": "Some",
            "description": "The value is provided and set to some value",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "T"
                  }
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
